boreal/tests/assets/invalid_files/parsing/str_to_int.yar
rule a {
    condition:
        10000000000000000000000000000
}
